# Pyomo-Solver-Analyzer

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
docs/: architecture.md
pyomo_solver_analyzer/: DEVELOPMENT.md  README.md  __init__.py  conftest.py  pyproject.toml  pytest.ini  setup.py
pyomo_solver_analyzer/docs/: examples.md
pyomo_solver_analyzer/src/: diagnostics.py  introspection.py  unfeasibility.py
pyomo_solver_analyzer/src/pyomo_solver_analyzer/: analyzer.py  diagnostics.py  introspection.py  unfeasibility.py
pyomo_solver_analyzer/tests/: test_analyzer.py  test_edge_cases.py
tests/: __init__.py  test_basic.py
